css/style.css
/* ... */
.dev-p
{
    display: flex;
}
.dev-p p:nth-child(1)
{
    color: var(--white);
}
.dev-p p:nth-child(2)
{
    margin: 0 5px;
}
.dev-p p:nth-child(3)
{
    color: var(--white);
}
.dev-p p:nth-child(4)
{
    margin: 0 5px;
}
.percentage-container #data-cover-h4
{
    color: rgba(255, 255, 255, 0.466);
    margin: 5px 5px 0 0;
    align-self: flex-end;
}

/* general */
.general-sections
{
    display: flex;
    width: 100%;
    height: auto;
    /* background-color: var(--white); */
    /* padding-bottom: 0px; */
    justify-content: center;
}
.section-container
{
    width: 90%;
    height: auto;
    padding-top: 20px;
}
.section-container p
{
    font-size: 16px;
    line-height: 20px;
}
.section-container .section-title
{
    font-size: 20px;
    font-weight:700;
    color: var(--white);
    margin-bottom: 30px;
}

/* article blog */

.pinned-blogs
{
    display: flex;
}

.article-blog
{
    position: relative;
    z-index: -1;
    display: flex;
    width: 100%;
    height: auto;
    margin-bottom: 30px;
    background-color: #131313;
    border-radius: 10px 8px 8px 10px
}

#section-featured-title
{
    position: absolute;
    top: 0px;
    display: none;
    width: 100%;
    height: 30px;
    font-size: 14px;
    font-weight: 600;
    padding: 0 10px 2px 10px;
    border-radius: 8px 8px 0 0;
    background-color: rgba(255, 0, 0, 0.245);
    color: var(--grey1);
    align-items: center;
    justify-content: center;

}
.article-blog-cover
{
    width: 300px;
    height: 230px;
    object-fit: cover;
    border-radius: 8px 0 0 8px;
}

.featured-article-blog-cover
{
    width: 300px;
    height: 230px;
    object-fit: cover;
    border-radius: 8px 0 0 8px;
}

.article-blog-info-container
{
    display: flex;
    width: 100%;
}
.article-blog-info
{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 14px 20px 20px 20px;
    width: 100%;
    height: auto;
    border-radius: 0 8px 8px 0;
}
.featured-title
{
    display: flex;
}
.featured-title img
{
    height: 36px;
}
.interactive-data
{
    display: flex;
    width: auto;
    align-items: center;
    /* margin-top: 14px; */
    justify-content: space-between;
}
.autor-data
{
    display: flex;
    width: 30%;
    align-items: center;
    margin-top: 14px;
    min-width: 190px;
}
.article-data img
{
    width: 32px;
    height: 32px;
    margin-right: 10px;
}
.name-date
{
    display: flex;
    flex-direction: column;
}
.name-date span:nth-child(1)
{
    font-size: 14px;
    font-weight: 700;
    padding-bottom: 4px;
}
.primary-buttons-article
{
    display: flex;
    width: 70%;
}
.primary-buttons-article a
{
    display: flex;
    width: 40%;
    min-width: 64px;
    height: 40px;
    margin: 20px 0 0 auto;
    padding: 0 20px 2.4px 20px;
    border-radius: 6px;
    background: var(--white);
    font-size: 14px;
    color: var(--dark);
    font-weight: 600;
    text-decoration: none;
    text-align: center;
    align-items: center;
    justify-content: center;
}
.primary-buttons-article a:nth-child(2)
{
    margin-left: 20px;
    border: 2px solid var(--white);
    background: transparent;
    color: var(--white);
}


/* article project */
.pinned-projects
{
    display: flex;
    margin-bottom: 30px;
}
.pinned-projects article:nth-child(2)
{
    margin: 0 20px;
}

.article-project
{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    background-color: #131313;
    border-radius: 10px 8px 8px 10px;
}
.article-project-cover
{
    width: 100%;
    height: 230px;
    object-fit: cover;
    border-radius: 8px 8px 0 0;
}
.article-project-info-container
{
    display: flex;
    width: 100%;
}
.article-project-info
{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    padding: 14px 20px 20px 20px;
    width: 100%;
    height: auto;
    border-radius: 0 8px 8px 0;
}
.article-project-data
{
    display: flex;
    flex-direction: column;
    margin-top: 16px;
}
.percentage-container
{
    display: flex;
    flex-direction: column;
}
.percentage-title
{
    display: flex;
}
.percentage-title h3
{
    margin-right: 8px;
}
.percentage-title h3:nth-child(1)
{
    color: var(--html-color);
}
.percentage-title h3:nth-child(2)
{
    color: var(--css-color);
}
.percentage-title h3:nth-child(3)
{
    color: var(--js-color);
}
.percentage
{
    display: flex;
}
.percentage span
{
    font-size: 12px;
    padding: 5px;
}

/* individual percentage */
#danielmacielacevedo-com span:nth-child(1)
{
    width: 37.3%;
    background-color: #131313;
    border-radius: 4px 0 0 4px;
}
#danielmacielacevedo-com span:nth-child(2)
{
    width: 50.5%;
    background-color: #232323;
    border-radius: 0 0 0 0;
}
#danielmacielacevedo-com span:nth-child(3)
{
    width: 12.2%;
    background-color: #333333;
    border-radius: 0 4px 4px 0;
}

#amar-onlineStore span:nth-child(1)
{
    width: 45.2%;
    background-color: var(--html-color);
    border-radius: 4px 0 0 4px;
}
#amar-onlineStore span:nth-child(2)
{
    width: 38.3%;
    background-color: var(--css-color);
    border-radius: 0 0 0 0;
}
#amar-onlineStore span:nth-child(3)
{
    width: 16.5%;
    background-color: var(--js-color);
    border-radius: 0 4px 4px 0;
}

#netflix-clone span:nth-child(1)
{
    width: 86.6%;
    background-color: var(--html-color);
    border-radius: 4px 0 0 4px;
}
#netflix-clone span:nth-child(2)
{
    width: 13.5%;
    background-color: var(--css-color);
    border-radius: 0 4px 4px 0;
}

#batabit-crypto span:nth-child(1)
{
    width: 41.1%;
    background-color: var(--html-color);
    border-radius: 4px 0 0 4px;
}
#batabit-crypto span:nth-child(2)
{
    width: 58.9%;
    background-color: var(--css-color);
    border-radius: 0 4px 4px 0;
}

#youtube-clone span:nth-child(1)
{
    width: 80.5%;
    background-color: var(--html-color);
    border-radius: 4px 0 0 4px;
}
/* ... */

